--- a/templates/core/produto/produtoindisponivel.html
+++ b/templates/core/produto/produtoindisponivel.html
@@ -1,6 +1,6 @@
 {% extends "base/index.html" %}
 {% load static bootstrap %}
-{% block conteudo %} 
+{% block conteudo %}  
 
     <div class="container mt-5">
         <h2>Produtos Indisponível</h2>
@@ -10,30 +10,32 @@
                 <button type="submit" class="btn btn-success">Pesquisar</button>
             </form>
         </div>
-        <table class="table table-hover text-center mt-3">
+        <table class="table table-hover mt-3">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Código</th>
-                    <th>Nome</th>
-                    <th>Descrição</th>
-                    <th>Preço</th>
-                    <th>Quantidade</th>
-                    <th>Estoque</th>
-                    <th>Status</th>
-                    <th>Ações</th>
+                    <th class="text-center">ID</th>
+                    <th class="text-center">Código</th>
+                    <th class="text-center">Nome</th>
+                    <th class="text-center">Tipo Produto</th>
+                    <th class="text-center">TAM</th>
+                    <th class="text-center">Cor</th>
+                    <th class="text-center">Preço</th>
+                    <th class="text-center">Quantidade</th>
+                    <th class="text-center">Status</th>
+                    <th class="text-center">Ações</th>
                 </tr>
             </thead>
             <tbody>
                 {% for produto in produtos %}
                 <tr>
-                    <td>{{ produto.id }}</td>
-                    <td>{{ produto.codigo }}</td>
-                    <td>{{ produto.nome }}</td>
-                    <td>{{ produto.descricao|safe }}</td>
-                    <td>{{ produto.preco }}</td>
-                    <td>{{ produto.quantidade }}</td>
-                    <td>{{ produto.estoque.nome }}</td>
+                    <td class="text-center">{{ produto.id|default:"-" }}</td>
+                    <td class="text-center">{{ produto.codigo|default:"-" }}</td>
+                    <td class="text-center">{{ produto.nome|default:"-" }}</td>
+                    <td class="text-center">{{ produto.tipo_produto|default:"-" }}</td>
+                    <td class="text-center">{{ produto.tamanho|default:"-" }}</td>
+                    <td class="text-center">{{ produto.cor|default:"-" }}</td>
+                    <td class="text-center">{{ produto.preco|default:"-" }}</td>
+                    <td class="text-center">{{ produto.quantidade }}</td>
                     {% if produto.vendido %}
                         <td>Vendido</td>
                     {% else %}
@@ -41,6 +43,37 @@
                     {% endif %}
                     <td>
                         <a href="{% url 'editar_produto' produto.pk %}" class="btn btn-primary">Editar</a>
+                        <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{produto.pk}}">
+                            Ver Detalhes
+                        </button>
+                        <div class="modal fade" id="staticBackdrop{{produto.pk}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-xl">
+                                <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Informações sobre o produto: '{{produto.nome}}'</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <ul class="list-group mt-4">
+                                        <li class="list-group-item"><b>Nome do Produto:</b> {{produto.nome|default:"-"}}</li>
+                                        <li class="list-group-item"><b>Código do Produto:</b> {{produto.codigo|default:"-"}}</li>
+                                        <li class="list-group-item"><b>ID do Produto:</b> {{produto.pk|default:"-"}}</li>
+                                        <li class="list-group-item"><b>Cor:</b> {{produto.cor|default:"-"}}</li>
+                                        <li class="list-group-item"><b>TAM:</b> {{produto.tamanho|default:"-"}}</li>
+                                        <li class="list-group-item"><b>Fornecedor:</b> {{produto.fornecedor|default:"-"}}</li>
+                                        <li class="list-group-item"><b>Marca:</b> {{produto.marca|default:"-"}}</li>
+                                        <li class="list-group-item"><b>Tipo Produto:</b> {{produto.tipo_produto|default:"-"}}</li>
+                                        <li class="list-group-item"><b>Preço do Produto Isoladamente:</b> {{produto.preco|default:"-"}}</li>
+                                        <li class="list-group-item"><b>Quantidade de Produto Disponível:</b> {{produto.quantidade}}</li>
+                                        <li class="list-group-item"><b>Status do Produto:</b> Disponível</li>
+                                        <li class="list-group-item"><b>Descrição:</b> {{produto.descricao|safe|default:"-"}}</li>
+                                    </ul>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
+                                </div>
+                                </div>
+                            </div>
                     </td>
                 </tr>
                 {% endfor %}
