--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -9,21 +9,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
 
     <!-- importando CSS e JV  -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">   
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/styles.css'%}">    
     <link href="{% static 'css/HoldOn.min.css'%}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.min.css' %}">
     <script src="{% static 'js/jquery.mask.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-
-    {% comment %} <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script> {% endcomment %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="{% static 'js/select2.min.js' %}"></script>
+    <script src="{% static 'js/index.global.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js'%}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.mask.min.js'%}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap-datepicker.min.js'%}"></script>
+    
+    {% comment %} Importação de cdn de charts {% endcomment %}
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    {% comment %} -------- {% endcomment %}
     <script src="https://kit.fontawesome.com/2cbdb08e7a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>   
 
 
     <!-- Importando icones -->
@@ -40,20 +45,13 @@
         <link rel="shortcut icon" href="{{ objuser.empresa.logo_navegador.url }}">
     {% else %}
         <link rel="shortcut icon" href="{% static 'images/logobrancaq.pngo' %}">    
-    {% endif %}
-    
-    <title>Afrodite -{{objuser.empresa.nome}}</title>
-
+    {% endif %}    
+    <title>Afrodite 
+        {% if objuser.empresa %}
+            -{{objuser.empresa.nome}}       
+        {% endif %}
+    </title>
 </head>
-    <style>
-        .form-group{
-            margin-top: 10px !important;
-        }
-        .help-block{
-            font-size: 12px !important;
-            color: #dc3545 !important;
-        }
-    </style>
     <body>
         <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
             <symbol id="check-circle-fill" viewBox="0 0 16 16">
@@ -80,10 +78,7 @@
             </style>
         {% endif %}
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3
-        {% if objuser and objuser.empresa.color %}
-            cor-menu
-        {% endif %}">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3 {% if objuser and objuser.empresa.color %} cor-menu {% endif %}">
             <div class="container-fluid">
                 <a class="navbar-brand ms-5"href="{% url 'inicio' %}">
                     {% if objuser and objuser.empresa.logo %}
@@ -95,7 +90,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         {% if objuser.is_superuser %}
                             <li class="nav-item dropdown">
@@ -148,6 +143,9 @@
                                         <li><a class="dropdown-item" href="{% url 'lista_produtos_indisponivel' objuser.empresa.pk %}">Produtos Indisponível</a></li>
                                     </ul>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Relatórios</a>
+                                </li>
                             {% endif %}
                             {% if not objuser.if_funcionario %}
                                 <li class="nav-item">
@@ -194,15 +192,21 @@
                                         <li><a class="dropdown-item" aria-current="page" href="{% url 'lista_clientes' %}">Clientes</a></li>
                                     </ul>
                                 </li>
-                                <a href="{% url 'notificacoes' %}" class="position-relative text-decoration-none mt-2 ms-2">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Relatórios</a>
+                                </li>
+                                <a href="{% url 'pendencias' %}" class="position-relative text-decoration-none mt-2 ms-2">
                                     <i class="fas fa-bell fa-lg"></i>
                                     <span class="notification-badge position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
                                         <span class="visually-hidden">New alerts</span>
                                     </span>
                                 </a>                                
                                 <button class="btn ms-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-                                    <i class="material-icons">settings</i> <!-- Ícone de engrenagem -->
-                                </button>                     
+                                    <i class="material-icons">settings</i>
+                                </button>
+                                <a href="#" class="position-relative text-decoration-none mt-2 ms-2">
+                                    <i class="material-icons">logout</i>
+                                </a>                     
                             {% endif %}
                         </ul>
                     {% endif %}
@@ -215,69 +219,82 @@
             </div>
         </nav>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasRightLabel">Configurações</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>                
-                <div class="offcanvas-body">
-                    {% if objuser and not objuser.if_funcionario %}
-                        <h6>Empresa</h6>
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasRightLabel">Configurações</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>                
+            <div class="offcanvas-body">
+                {% if objuser and not objuser.if_funcionario %}
+                    <h6>Empresa</h6>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action" href="{% url 'editar_empresa' objuser.empresa.pk %}">Editar Empresa</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" href="{% url 'detalhes_empresa' objuser.empresa.pk %}">Visualizar Empresa</a>
+                    </ul>
+                    <h6 class="mt-3">Meta</h6>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'cadastrar_meta'%}">Cadastrar Meta</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'lista_metas'%}">Listagem de Metas</a>
+                    </ul>
+                    <h6 class="mt-3">Estoque</h6>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'cadastrar_estoque' %}">Cadastrar Estoque</a>
+                    </ul>
+                    <h6 class="mt-3">Produto</h6>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'cadastrar_tamanho' %}">Cadastrar Tamanho de Produto</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'listar_tamanho' %}">Lista de Tamanho</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'tipo_produto_criar' %}">Cadastrar Tipo de Produto</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'listar_tipos_de_produtos' %}">Listar Tipo de Produto</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'cadastrar_marca' %}">Cadastrar Marca</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'listar_marcas' %}">Listar Marcas</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" href="{% url 'cadastrar_fornecedor' %}">Cadastrar Fornecedor</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" href="{% url 'listar_fornecedores' %}">Listar Fornecedores</a>
+                    </ul>                        
+                    <h6 class="mt-3">Colaborador</h6>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action" href="{% url 'cadastrar_usuario' %}">Cadastrar Colaborador</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" href="{% url 'lista_usuarios' objuser.empresa.pk %}">Listar Colaborador</a>
+                    </ul>
+                    <h6 class="mt-3">Relatórios</h6>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" href="{% url 'agenda' %}">Relatórios(FAZER)</a>
+                    </ul>
+                    <h6 class="mt-3">Agenda</h6>
+                    {% if objuser.empresa.agenda %}
                         <ul class="list-group">
-                            <a class="list-group-item list-group-item-action" href="{% url 'editar_empresa' objuser.empresa.pk %}">Editar Empresa</a>
+                            <a class="list-group-item list-group-item-action" href="{% url 'agenda' %}">Agenda</a>
                         </ul>
+                    {% else %}
                         <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" href="{% url 'detalhes_empresa' objuser.empresa.pk %}">Visualizar Empresa</a>
-                        </ul>
-                        <h6 class="mt-3">Meta</h6>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'cadastrar_meta'%}">Cadastrar Meta</a>
-                        </ul>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'lista_metas'%}">Listagem de Metas</a>
-                        </ul>
-                        <h6 class="mt-3">Estoque</h6>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'cadastrar_estoque' %}">Cadastrar Estoque</a>
-                        </ul>
-                        <h6 class="mt-3">Produto</h6>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'cadastrar_tamanho' %}">Cadastrar Tamanho de Produto</a>
-                        </ul>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'listar_tamanho' %}">Lista de Tamanho</a>
-                        </ul>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'tipo_produto_criar' %}">Cadastrar Tipo de Produto</a>
-                        </ul>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'listar_tipos_de_produtos' %}">Listar Tipo de Produto</a>
-                        </ul>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'cadastrar_marca' %}">Cadastrar Marca</a>
-                        </ul>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" aria-current="page" href="{% url 'listar_marcas' %}">Listar Marcas</a>
-                        </ul>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" href="{% url 'cadastrar_fornecedor' %}">Cadastrar Fornecedor</a>
-                        </ul>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" href="{% url 'listar_fornecedores' %}">Listar Fornecedores</a>
-                        </ul>                        
-                        <h6 class="mt-3">Colaborador</h6>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action" href="{% url 'cadastrar_usuario' %}">Cadastrar Colaborador</a>
-                        </ul>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action mt-1" href="{% url 'lista_usuarios' objuser.empresa.pk %}">Listar Colaborador</a>
-                        </ul>
-                        <h6 class="mt-3">Agenda(FAZER)</h6>
-                        <ul class="list-group">
-                            <a class="list-group-item list-group-item-action" href="{% url 'cadastrar_usuario' %}">Agenda</a>
+                            <a class="list-group-item list-group-item-action">Agenda
+                                <span class="text-muted">(Não liberado)</span>
+                            </a>
                         </ul>
                     {% endif %}
-                </div>
-        </div> 
+                {% endif %}
+            </div>
+        </div>
+        
         {% if objuser and not objuser.is_superuser %}
             <a type="button" class="btn btn-primary ms-5" href="{% url 'cadastrar_venda' %}"
             style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
@@ -321,11 +338,18 @@
                         role="button"
                         data-mdb-ripple-color="dark"><i class="fab fa-github"></i>
                     </a>
-            </section>
+                </section>
             </div>
             <footer class="page-footer font-small bg-dark">
-                <div class="footer-copyright text-center py-3">© 2024 Camila Adriana Gomes|GomesMilla</div>
+                <div class="footer-copyright text-center py-3">© 2024 GOMES TECHNOLOGY</div>
             </footer>       
         </footer>
     </body>
 </html>
+
+{% comment %} JAVA SCRIPT NÃO MAIS USADOS {% endcomment %}
+{% comment %} <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script> {% endcomment %}
+{% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.10.1/locales-all.min.js"></script> {% endcomment %}
+{% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script> {% endcomment %}
+{% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script> {% endcomment %}
+{% comment %} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">  {% endcomment %}
