:tada: Nova funcionalidade de listar vendas por colaborador

--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -318,13 +318,13 @@
                     </a>
                     <a
                         class="btn btn-link btn-floating btn-lg text-dark m-1 bg-light" target="_blank"
-                        href="https://instagram.com/gomysmilla?igshid=ZDc4ODBmNjlmNQ=="
+                        href="https://www.instagram.com/milagomes.dev?igsh=c2ppeDBzNXNhMjJx"
                         role="button"
                         data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i>
                     </a> 
                     <a
                         class="btn btn-link btn-floating btn-lg text-dark m-1 bg-light" target="_blank"
-                        href="https://www.instagram.com/maosamigas_oficial/"
+                        href="https://www.instagram.com/camilaadrianagomes/"
                         role="button"
                         data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>      
                     <a
