--- a/templates/users/users/cadastrar_usuario.html
+++ b/templates/users/users/cadastrar_usuario.html
@@ -3,7 +3,7 @@
 {% block conteudo %} 
 
     <div class="container mt-4">
-        <h2>Cadastrar Usuário</h2>
+        <h2>Cadastrar Colaborador</h2>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.media}}
