:pushpin: Adicionando funcionalidade de pesquisar pedido

--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -179,7 +179,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="{% url 'cadastrar_vale_presente' %}">Cadastrar Vale Presente</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'listar_vale_presente' %}">LIstar Vale Presente</a></li>
+                                        <li><a class="dropdown-item" href="{% url 'listar_vale_presente' %}">Listar Vale Presente</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item dropdown">
