--- a/templates/core/pedido/lista_pedidos.html
+++ b/templates/core/pedido/lista_pedidos.html
@@ -1,84 +1,117 @@
 {% extends "base/index.html" %}
 {% load static bootstrap %}
-{% block conteudo %} 
+{% block conteudo %}
+
+    <style>
+        a{
+            color: rgba(var(--bs-link-color-rgb), var(--bs-link-opacity, 1));
+            text-decoration: none;
+        }
+    </style>
 
     <div class="container mt-5">
         <h2>Pedidos</h2>
-        <div class="row">
-            <form method="get" class="form-inline mb-3 d-flex">
-                <input type="text" name="q" class="form-control me-2" placeholder="Pesquisar pedido" value="{{ request.GET.q }}">
-                <button type="submit" class="btn btn-success">Pesquisar</button>
-            </form>
-        </div>
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Cliente</th>
-                    <th>Produto</th>
-                    <th>Telefone</th>
-                    <th>Descrição</th>
-                    <th>Status</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for pedido in pedidos %}
-                <tr {% if pedido.status == 'pendente' %}class="table-danger"{% endif %}>
-                    <td>{{ pedido.id }}</td>
-                    <td>{{ pedido.cliente_nome }}</td>
-                    <td>{{ pedido.produto.nome|default:"-" }}</td>
-                    <td>{{ pedido.cliente_telefone }}</td>
-                    <td>{{ pedido.descricao|safe }}</td>
-                    <td>{{ pedido.get_status_display }}</td>
-                    <td>
-                        {% if not pedido.status != 'pendente' %}
-                            <a href="{% url 'atualizar_pedido' pedido.pk %}" class="btn btn-primary">Editar</a>
-                        {% endif %}                        
-                        <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{pedido.pk}}">
-                            Detalhes
-                        </button>
-                        <div class="modal fade" id="staticBackdrop{{pedido.pk}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-xl">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5 text-light" id="staticBackdropLabel">Informações sobre o pedido da: '{{pedido.cliente_nome}}'</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        {% if pedido.status == 'pendente' %}
-                                            <div class="alert alert-danger" role="alert">
-                                                O pedido ainda não foi atendido!
+        {% if pedidos %}
+            <div class="row">
+                <form method="get" class="form-inline mb-3 d-flex">
+                    <input type="text" name="q" class="form-control me-2" placeholder="Pesquisar pedido" value="{{ request.GET.q }}">
+                    <button type="submit" class="btn btn-success">Pesquisar</button>
+                </form>
+            </div>
+            <div class="row">
+                <div class="col-md-2">
+                    <ul class="list-group">
+                        <a href="{% url 'filtrar_pedidos' 'pendente' %}"><li class="list-group-item list-group-item-action">Pendente</li></a>
+                        <a href="{% url 'filtrar_pedidos' 'comprado' %}"><li class="list-group-item list-group-item-action">Comprado</li></a>
+                        <a href="{% url 'filtrar_pedidos' 'notificado' %}"><li class="list-group-item list-group-item-action">Notificado</li></a>
+                    </ul>
+                </div>
+                <div class="col-md-10">
+                    <table class="table table-hover table-bordered text-center">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Cliente</th>
+                                <th>Produto</th>
+                                <th>Telefone</th>
+                                <th>Status</th>
+                                <th>Ações</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for pedido in pedidos %}
+                            <tr>
+                                <td>{{ pedido.id }}</td>
+                                <td>{{ pedido.cliente_nome }}</td>
+                                <td>{{ pedido.produto.nome|default:"-" }}</td>
+                                <td>{{ pedido.cliente_telefone }}</td>
+                                <td>{{ pedido.get_status_display }}</td>
+                                <td>
+                                    {% if not pedido.status != 'pendente' %}
+                                        <a href="{% url 'atualizar_pedido' pedido.pk %}" class="btn btn-primary">Editar</a>
+                                    {% endif %}                        
+                                    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{pedido.pk}}">
+                                        Detalhes
+                                    </button>
+                                    <div class="modal fade" id="staticBackdrop{{pedido.pk}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                        <div class="modal-dialog modal-xl">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h1 class="modal-title fs-5 text-light" id="staticBackdropLabel">Informações sobre o pedido da: '{{pedido.cliente_nome}}'</h1>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    {% if pedido.status == 'pendente' %}
+                                                        <div class="alert alert-danger" role="alert">
+                                                            O pedido ainda não foi atendido!
+                                                        </div>
+                                                    {% endif %}
+                                                    <h6 class="text-danger-emphasis fst-italic">Informações sobre o cliente:</h6>
+                                                    <ul class="list-group mt-3">
+                                                        <li class="list-group-item"><b>Cliente:</b> {{pedido.cliente|default:"-"}}</li>
+                                                        <li class="list-group-item"><b>Nome do Cliente:</b> {{pedido.cliente_nome|default:"-"}}</li>
+                                                        <li class="list-group-item"><b>Telefone:</b> {{pedido.cliente_telefone|default:"-"}}</li>
+                                                        <li class="list-group-item"><b>E-mail:</b> {{pedido.cliente_email|default:"-"}}</li>
+                                                    </ul>
+                                                    <h6 class="text-danger-emphasis fst-italic mt-4">Informações gerais:</h6>
+                                                    <ul class="list-group mt-3">
+                                                        <li class="list-group-item"><b>Produto:</b> {{pedido.produto.nome|default:"-"}}</li>
+                                                        <li class="list-group-item"><b>Vendedor:</b> {{pedido.vendedor|default:"-"}}</li>
+                                                        <li class="list-group-item"><b>Quantidade:</b> {{pedido.quantidade|default:"-"}}</li>
+                                                        <li class="list-group-item"><b>Data da Solicitação:</b> {{pedido.data_pedido|default:"-"}}</li>
+                                                        <li class="list-group-item"><b>Status:</b> {{pedido.get_status_display}}</li>
+                                                        <li class="list-group-item"><b>Descrição:</b> {{pedido.descricao|safe|default:"-"}}</li>
+                                                    </ul>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
+                                                </div>
                                             </div>
-                                        {% endif %}
-                                        <h6 class="text-danger-emphasis fst-italic">Informações sobre o cliente:</h6>
-                                        <ul class="list-group mt-3">
-                                            <li class="list-group-item"><b>Cliente:</b> {{pedido.cliente|default:"-"}}</li>
-                                            <li class="list-group-item"><b>Nome do Cliente:</b> {{pedido.cliente_nome|default:"-"}}</li>
-                                            <li class="list-group-item"><b>Telefone:</b> {{pedido.cliente_telefone|default:"-"}}</li>
-                                            <li class="list-group-item"><b>E-mail:</b> {{pedido.cliente_email|default:"-"}}</li>
-                                        </ul>
-                                        <h6 class="text-danger-emphasis fst-italic mt-4">Informações gerais:</h6>
-                                        <ul class="list-group mt-3">
-                                            <li class="list-group-item"><b>Produto:</b> {{pedido.produto.nome|default:"-"}}</li>
-                                            <li class="list-group-item"><b>Vendedor:</b> {{pedido.vendedor|default:"-"}}</li>
-                                            <li class="list-group-item"><b>Quantidade:</b> {{pedido.quantidade|default:"-"}}</li>
-                                            <li class="list-group-item"><b>Data da Solicitação:</b> {{pedido.data_pedido|default:"-"}}</li>
-                                            <li class="list-group-item"><b>Status:</b> {{pedido.get_status_display}}</li>
-                                            <li class="list-group-item"><b>Descrição:</b> {{pedido.descricao|safe|default:"-"}}</li>
-                                        </ul>
+                                        </div>
                                     </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        {% else %}
+            <div class="row">
+                <div class="col-md-2">
+                    <ul class="list-group">
+                        <a href="{% url 'filtrar_pedidos' 'pendente' %}"><li class="list-group-item list-group-item-action">Pendente</li></a>
+                        <a href="{% url 'filtrar_pedidos' 'comprado' %}"><li class="list-group-item list-group-item-action">Comprado</li></a>
+                        <a href="{% url 'filtrar_pedidos' 'notificado' %}"><li class="list-group-item list-group-item-action">Notificado</li></a>
+                    </ul>
+                </div>
+                <div class="col-md-10">
+                    <div class="alert alert-danger" role="alert">
+                        Não há pedidos cadastrado.
+                    </div> 
+                </div>                
+            </div>  
+        {% endif %}
     </div>
 
 {% endblock conteudo %}
