--- a/templates/users/cliente/lista_clientes.html
+++ b/templates/users/cliente/lista_clientes.html
@@ -10,31 +10,37 @@
                 <button type="submit" class="btn btn-success">Pesquisar</button>
             </form>
         </div>
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nome</th>
-                    <th>Data de Aniversário</th>
-                    <th>Telefone Celular</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for cliente in clientes %}
-                <tr>
-                    <td>{{ cliente.id }}</td>
-                    <td>{{ cliente.nome }}</td>
-                    <td>{{ cliente.data_aniversario }}</td>
-                    <td>{{ cliente.telefone_celular }}</td>
-                    <td>
-                        <a href="{% url 'editar_cliente' cliente.pk %}" class="btn btn-primary">Editar</a>
-                        <a href="{% url 'detalhe_cliente' cliente.pk %}" class="btn btn-warning">Detalhes</a>                         
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        {% if clientes %}
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Data de Aniversário</th>
+                        <th>Telefone Celular</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for cliente in clientes %}
+                    <tr>
+                        <td>{{ cliente.id }}</td>
+                        <td>{{ cliente.nome }}</td>
+                        <td>{{ cliente.data_aniversario }}</td>
+                        <td>{{ cliente.telefone_celular }}</td>
+                        <td>
+                            <a href="{% url 'editar_cliente' cliente.pk %}" class="btn btn-primary">Editar</a>
+                            <a href="{% url 'detalhe_cliente' cliente.pk %}" class="btn btn-warning">Detalhes</a>                         
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <div class="alert alert-danger" role="alert">
+                Não há cliente cadastrado.
+            </div>   
+        {% endif %}
     </div>
 
 {% endblock conteudo %}
